[package]
name = "cython_test"
version = "0.1.0"
authors = ["Federico Simonetta <federico.simonetta@unimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "list_rust"
path = "src/list_rust.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use cython_test;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13"
ndarray = {version = "0.14", features = ["rayon"]}


[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
