[tool.poetry]
name = "cython_test"
version = "0.1.0"
description = ""
authors = ["Federico Simonetta <federico.simonetta@unimi.it>"]

[tool.poetry.dependencies]
python = "3.9"
Cython = "^0.29.22"
maturin = "^0.10.3"
julia = "^0.5.6"
numpy = "^1.20.2"
numba = "^0.53.1"
setuptools-rust = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "setuptools-rust"]
build-backend = "poetry.core.masonry.api"
