[package]
name = "rust_python_list"
version = "0.1.0"
authors = ["Federico Simonetta <federicosimonetta@zoho.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "list_rust"
path = "src/list_rust.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use cython_test;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.7.0"

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
